--- a/MercadoLibreExample.xcodeproj/xcshareddata/xcschemes/MercadoLibreExample.xcscheme
+++ b/MercadoLibreExample.xcodeproj/xcshareddata/xcschemes/MercadoLibreExample.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1210"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -38,14 +38,33 @@
             ReferencedContainer = "container:MercadoLibreExample.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:TestPlans/UnitTests.xctestplan">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:TestPlans/FullTests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "215B40DB2549F51600604B52"
-               BuildableName = "MercadoLibreExampleTests.xctest"
-               BlueprintName = "MercadoLibreExampleTests"
+               BuildableName = "UnitTests.xctest"
+               BlueprintName = "UnitTests"
+               ReferencedContainer = "container:MercadoLibreExample.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "21EEA0192558EF7F004E5D25"
+               BuildableName = "SnapshotTests.xctest"
+               BlueprintName = "SnapshotTests"
                ReferencedContainer = "container:MercadoLibreExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
