--- a/MercadoLibreClient/.swiftpm/xcode/xcshareddata/xcschemes/MercadoLibreClientLive.xcscheme
+++ b/MercadoLibreClient/.swiftpm/xcode/xcshareddata/xcschemes/MercadoLibreClientLive.xcscheme
@@ -30,7 +30,7 @@
       codeCoverageEnabled = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Tests/MercadoLibreClientLiveTests/UnitTests.xctestplan"
+            reference = "container:Tests/UnitTests.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
